--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "feather-icons": "^4.29.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
